--- a/logstash.conf
+++ b/logstash.conf
@@ -1,30 +1,17 @@
 input {
   file {
-    type => "java"
-    path => "/home/stas/projects/spring-boot-microservices/logs/spring-boot-microservices.log"
-    codec => multiline {
-      pattern => "^%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}.*"
-      negate => "true"
-      what => "previous"
-    }
+    path => "/usr/share/logstash/spring-boot-microservices.log"
+    start_position => "beginning"
   }
 }
 
-filter {
-  if [message] =~ "\tat" {
-    grok {
-      match => ["message", "^(\tat)"]
-      add_tag => ["stacktrace"]
-    }
-  }
-
-}
 output {
- stdout {
+  stdout{
     codec => rubydebug
   }
-
   elasticsearch {
-    hosts => "elasticsearch:9200"
+    hosts => ["http://elasticsearch:9200"]
+    index => "spring-boot-microservices-%{+YYYY.MM.dd}"
   }
 }
+
