--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ USER_SERVICE_PORT=8000
 EUREKA_PORT=8761
 ADMIN_SERVICE_PORT=8002
 FACULTY_SERVICE_PORT=8001
+ENROLLMENT_SERVICE_PORT=8003
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
