--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,7 @@
 .bin
 .lock
 .probe
-admin-service/build
-analytics-service/build
-enrollment-service/build
-faculty-service/build
-notification-service/build
-user-service/build
+*/build
 logs
 .env
-
+*.log
