--- a/config/src/main/resources/faculty-dev.properties
+++ b/config/src/main/resources/faculty-dev.properties
@@ -1,5 +1,9 @@
-spring.boot.admin.client.url=http://localhost:${ADMIN_SERVICE_PORT}/admin
 server.port=${FACULTY_SERVICE_PORT}
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoint.shutdown.enabled=true
 
 spring.config.import=file:env.properties
 
@@ -13,3 +17,4 @@ spring.activemq.password=${ACTIVEMQ_PASSWORD}
 spring.activemq.topic-name=faculty_service
 
 eureka.client.service-url.defaultZone=http://localhost:${EUREKA_PORT}/eureka/
+spring.boot.admin.client.url=http://localhost:${ADMIN_SERVICE_PORT}/admin
