--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'spring-boot-microservices'
-include 'auth', 'faculty'
-include 'enrollment-service'
+include 'auth', 'faculty', 'enrollment'
 include 'analytics-service'
 include 'notification-service'
 include 'admin-service'
