--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 USER_SERVICE_PORT=8000
+EUREKA_PORT=8761
+ADMIN_SERVICE_PORT=8002
+FACULTY_SERVICE_PORT=8001
+ENROLLMENT_SERVICE_PORT=8003
+ANALYTICS_SERVICE_PORT=8005
+GATEWAY_PORT=8010
+NOTIFICATION_SERVICE_PORT=8004
+
+USER_SERVICE_GRPC_PORT=9000
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
@@ -8,3 +17,5 @@ TIME_ZONE=UTC
 
 ACTIVEMQ_WEB_PORT=8161
 ACTIVEMQ_BROKER_PORT=61616
+ACTIVEMQ_USER=admin
+ACTIVEMQ_PASSWORD=admin
