--- a/enrollment/build.gradle
+++ b/enrollment/build.gradle
@@ -40,6 +40,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-activemq'
     implementation 'org.postgresql:r2dbc-postgresql:1.0.2.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'de.codecentric:spring-boot-admin-starter-client:3.1.7'
