--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=notification
 spring.profiles.active=dev
 spring.main.allow-bean-definition-overriding=true
 
+logging.config=classpath:logback-file.xml
+
 activemq.faculty.queue.name=faculty_service
 activemq.faculty.routing.key=faculty_service_routing_key
 activemq.faculty.get=faculty_get_service
